# sematext2psql

./: Cargo.toml  README.md
src/: main.rs
