[package]
name = "sematext2psql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
itertools = "0.10.5"
json = "0.12.4"
chrono = "0.4.22"
clap = { version = "4.0.18", features = [ "derive" ] }
indicatif = "*"